--- a/views/game_queue_show.haml
+++ b/views/game_queue_show.haml
@@ -3,3 +3,7 @@
 %body
   %div
     %h1= @gameQueue.name
+    %form{action: "/game_queue/#{@gameQueue.id}", method: "post"}
+      %input{type: 'hidden', name: '_method', value: 'delete'}
+      %input{type: 'submit', value: 'Delete Game Queue'}
+  %a{href: "/game_queues/"} Back to Game Queue Index
