--- a/views/game_console_show.haml
+++ b/views/game_console_show.haml
@@ -8,4 +8,4 @@
     %form{action: "/game_consoles/#{@gameConsole.id}", method: "post"}
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game Console'}
-  %a{href: "/game_consoles/"} Back to Game Index
+  %a{href: "/game_consoles/"} Back to Game Console Index
