--- a/views/new_game_console.haml
+++ b/views/new_game_console.haml
@@ -3,7 +3,7 @@
 %head
   %title Twitch Stream Vote Database
 %body
-  %h2 Create New Game Entry
+  %h2 Create New Game Console Entry
   %form{action: '/new_game_console', method: 'post'}
     %ul
       %li
