added a bunch of navigation links to the webpages

--- a/views/game_console_show.haml
+++ b/views/game_console_show.haml
@@ -9,3 +9,5 @@
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game Console'}
   %a{href: "/game_consoles/"} Back to Game Console Index
+  %div
+    %a{href: "/"} Back to Main Page
