--- a/views/game_genre_show.haml
+++ b/views/game_genre_show.haml
@@ -9,3 +9,5 @@
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game Genre'}
   %a{href: "/game_genres/"} Back to Game Genre Index
+  %div
+    %a{href: "/"} Back to Main Page
