--- a/views/new_game_console.haml
+++ b/views/new_game_console.haml
@@ -9,3 +9,7 @@
       %li
         %input{placeholder: 'Game Console Name', type: 'text', name: 'name'}
     %input{type: 'submit'}
+  %div
+    %a{href: "/game_consoles/"} Back to Game Consoles
+  %div
+    %a{href: "/"} Back to Main Page
