--- a/views/new_game_genre.haml
+++ b/views/new_game_genre.haml
@@ -9,3 +9,7 @@
       %li
         %input{placeholder: 'Game Genre Name', type: 'text', name: 'name'}
     %input{type: 'submit'}
+    %div
+      %a{href: "/game_genres/"} Back to Game Genres
+  %div
+    %a{href: "/"} Back to Main Page
