--- a/views/game_console_index.haml
+++ b/views/game_console_index.haml
@@ -10,3 +10,5 @@
         %div
           %a{href: "/game_consoles/#{g.id}"} #{g.name}
   %a{href: "/new_game_console/"} Add a New Game Console
+  %div
+    %a{href: "/"} Back to Main Page
