--- a/views/game_genre_index.haml
+++ b/views/game_genre_index.haml
@@ -10,3 +10,5 @@
         %div
           %a{href: "/game_genres/#{g.id}"} #{g.name}
   %a{href: "/new_game_genre/"} Add a New Game Genre
+  %div
+    %a{href: "/"} Back to Main Page
