--- a/views/index.haml
+++ b/views/index.haml
@@ -3,4 +3,7 @@
 %head
   %title Twitch Stream Vote Database
 %body
-  %div This is a test
+  %div
+    %a{href: "/game_consoles/"} Game Consoles
+  %div
+    %a{href: "/game_genres/"} Game Genres
