added the ablity to create, delete, and list games again

--- a/views/game_index.haml
+++ b/views/game_index.haml
@@ -9,5 +9,5 @@
       %li
         %div
           %a{href: "/game/#{g.id}"} #{g.name}
-          %span, Year: #{g.year}, Current Votes: #{g.votes}
+          -# %span, Year: #{g.year}, Current Votes: #{g.votes}
   %a{href: "/new_game/"} Add a New Game
