--- a/views/game_show.haml
+++ b/views/game_show.haml
@@ -3,8 +3,8 @@
 %body
   %div
     %h1= @game.name
-    %h2= 'Year: ' + @game.year.to_s
-    %h1= 'Current Votes: ' + @game.votes.to_s
+    -# %h2= 'Year: ' + @game.year.to_s
+    -# %h1= 'Current Votes: ' + @game.votes.to_s
     %form{action: "/game/#{@game.id}", method: "post"}
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game'}
