--- a/views/new_game.haml
+++ b/views/new_game.haml
@@ -8,8 +8,8 @@
     %ul
       %li
         %input{placeholder: 'Game Name', type: 'text', name: 'name'}
-      %li
-        %input{placeholder: 'Release Year', type: 'number', name: 'year'}
-      %li
-        %input{placeholder: 'Starting Votes', type: 'number', name: 'votes'}
+      -# %li
+      -#   %input{placeholder: 'Release Year', type: 'number', name: 'year'}
+      -# %li
+      -#   %input{placeholder: 'Starting Votes', type: 'number', name: 'votes'}
     %input{type: 'submit'}
