--- a/views/game_index.haml
+++ b/views/game_index.haml
@@ -11,3 +11,5 @@
           %a{href: "/game/#{g.id}"} #{g.name}
           -# %span, Year: #{g.year}, Current Votes: #{g.votes}
   %a{href: "/new_game/"} Add a New Game
+  %div
+    %a{href: "/"} Back to Main Page
