added games index link to main page

--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,8 @@
   %title Twitch Stream Vote Database
 %body
   %div
+    %a{href: "/games/"} Games
+  %div
     %a{href: "/game_consoles/"} Game Consoles
   %div
     %a{href: "/game_genres/"} Game Genres
