--- a/views/game_show.haml
+++ b/views/game_show.haml
@@ -3,8 +3,15 @@
 %body
   %div
     %h1= @game.name
-    -# %h2= 'Year: ' + @game.year.to_s
-    -# %h1= 'Current Votes: ' + @game.votes.to_s
+    %h2= 'Game consoles:'
+    - @game.game_consoles.each do |g|
+      %div #{g.name}
+    %form{action: "/games/#{@game.id}/add_console", method: "post"}
+      %select{name: 'game_console_id', label: " "}
+        %option{value: "no_console", disabled: "disabled", selected: "selected"} Select Game Console
+        - @gameConsoles.each do |g|
+          %option{value: "#{g.id}"} #{g.name}
+      %input{type: 'submit', value: 'Add Game Console'}
     %form{action: "/games/#{@game.id}", method: "post"}
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game'}
