--- a/views/game_console_show.haml
+++ b/views/game_console_show.haml
@@ -5,6 +5,9 @@
 %body
   %div
     %h1= @gameConsole.name
+    %h2 Games on this Console
+    - @game.each do |g|
+      %div #{g.name}
     %form{action: "/game_consoles/#{@gameConsole.id}", method: "post"}
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game Console'}
