--- a/views/game_show.haml
+++ b/views/game_show.haml
@@ -5,7 +5,8 @@
     %h1= @game.name
     %h2= 'Game consoles:'
     - @game.game_consoles.each do |g|
-      %a{href: "/game_consoles/#{g.id}"} #{g.name}
+      %div
+        %a{href: "/game_consoles/#{g.id}"} #{g.name}
     %form{action: "/games/#{@game.id}/add_console", method: "post"}
       %select{name: 'game_console_id', label: " "}
         %option{value: "no_console", disabled: "disabled", selected: "selected"} Select Game Console
