switched add_console to change_console so that reuse with REST would make more sense

--- a/views/game_show.haml
+++ b/views/game_show.haml
@@ -7,11 +7,11 @@
     - @game.game_consoles.each do |g|
       %div
         %a{href: "/game_consoles/#{g.id}"} #{g.name}
-        %form{action: "/games/#{@game.id}/add_console", method: "post"}
+        %form{action: "/games/#{@game.id}/change_console", method: "post"}
           %input{type: 'hidden', name: 'game_console_id', value: "#{g.id}"}
           %input{type: 'hidden', name: '_method', value: 'delete'}
           %input{type: 'submit', value: 'Remove Console'}
-    %form{action: "/games/#{@game.id}/add_console", method: "post"}
+    %form{action: "/games/#{@game.id}/change_console", method: "post"}
       %select{name: 'game_console_id', label: " "}
         %option{value: "no_console", disabled: "disabled", selected: "selected"} Select Game Console
         - @gameConsoles.each do |g|
