added the ability to remove games from the console pages, mirroring the ability to remove consoles from game pages

--- a/views/game_console_show.haml
+++ b/views/game_console_show.haml
@@ -8,6 +8,10 @@
     %h2 Games on this Console
     - @game.each do |g|
       %a{href: "/games/#{g.id}"} #{g.name}
+      %form{action: "/game_consoles/#{@gameConsole.id}/change_game", method: "post"}
+        %input{type: 'hidden', name: 'game_id', value: "#{g.id}"}
+        %input{type: 'hidden', name: '_method', value: 'delete'}
+        %input{type: 'submit', value: 'Remove Game'}
     %form{action: "/game_consoles/#{@gameConsole.id}", method: "post"}
       %input{type: 'hidden', name: '_method', value: 'delete'}
       %input{type: 'submit', value: 'Delete Game Console'}
