hide current vote line if value is null

--- a/views/game_show.haml
+++ b/views/game_show.haml
@@ -11,7 +11,7 @@
           %input{type: 'hidden', name: 'game_console_id', value: "#{g.id}"}
           %input{type: 'hidden', name: '_method', value: 'delete'}
           %input{type: 'submit', value: 'Remove Console'}
-    %h2= 'Current Votes: ' + @game.current_votes.to_s
+    %h2= 'Current Votes: ' + @current_votes unless @current_votes.empty?  
     %form{action: "/games/#{@game.id}/change_console", method: "post"}
       %select{name: 'game_console_id', label: " "}
         %option{value: "no_console", disabled: "disabled", selected: "selected"} Select Game Console
