updated game queue haml

--- a/views/game_queue_index.haml
+++ b/views/game_queue_index.haml
@@ -8,5 +8,4 @@
     - @gameQueue.each do |g|
       %li
         %div
-          %a{href: "/game_queue/#{g.id}"} #{g.name}
-  %a{href: "/new_game_queue/"} Add a New Game Queue
+          %a{href: "/game_queues/#{g.id}"} #{g.name}
