added link to queue page on main page

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,3 +9,5 @@
     %a{href: "/game_consoles/"} Game Consoles
   %div
     %a{href: "/game_genres/"} Game Genres
+  %div
+    %a{href: "/game_queues/"} Game Queues
