--- a/views/new_game.haml
+++ b/views/new_game.haml
@@ -9,6 +9,11 @@
       %li
         %input{placeholder: 'Game Name', type: 'text', name: 'name'}
       %li
+        %span Game Queue:
+        %select{name: 'game_queue_id', label: " "}
+          - @gameQueues.each do |g|
+            %option{value: "#{g.id}"} #{g.name}
+      %li
         %span Game Console:
         %select{name: 'game_console_id', label: " "}
           %option{value: "no_console", disabled: "disabled", selected: "selected"} Select Game Console
@@ -22,7 +27,7 @@
             %option{value: "#{g.id}"} #{g.name}
       %li
         %label{for: "current_votes"} Current Votes:
-        %input{type: "number", name: "current_votes", min: "0"} 
+        %input{type: "number", name: "current_votes", min: "0"}
     %input{type: 'submit'}
     %div
       %a{href: "/games/"} Back to Games
